welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: ';' expected but 'for' found.
for (j<-1 to 4) {baisseBrosse() for (i<-1 to 4) {
                                ^